# Taproot

./: .dockerignore  .env.example  .eslintrc.js  .gitignore  .prettierrc  CLAUDE.md  README.md  docker-compose.yml  ecosystem.config.js  nixpacks.toml  package-lock.json  package.json  railway.json  vercel.json
.claude/: launch.json
.github/: dependabot.yml
.husky/: pre-commit
apps/desktop/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md
apps/desktop/src-tauri/src/: main.rs  printing.rs
client/: index.html  package.json
client.bak/: tailwind.config.js
docs/: ACCOUNT_WORKFLOW_TEST.md  ADMIN_USER_CHECK.sql  API.md  ARCHITECTURE.md  BACKLOG.md  BACKUP.md  CLAUDE.md  DEMO_DATA_FIX.sql  DEPLOYMENT.md  DESKTOP_CODE_SIGNING.md  ENV_CHECKLIST.md  FULL_STACK_DIAGRAM.md  HOUR1_REPORT.md  HOUR3_REPORT.md  HOUR5_CLEANUP.sql  LAUNCH.md  MIGRATIONS_CHECK.sql  ONBOARDING.md  PRINT_SERVER.md  PRODUCTION_CERTIFICATION.md  PSR_CLEANUP.sql  PSR_REPORT.md  QA_REPORT.md  QUICK_REFERENCE.md  RAILWAY_ENV.md  REMOVE_DEMO_DATA.sql  ROADMAP.md  RUNBOOK.md  SECURITY.md  SECURITY_AUDIT_2026.md  SESSION_GUIDELINES.md  SESSION_HISTORY.md  STUDIO_MODULE_SPEC.md  TECH_SPEC.md  V2_0_SANDBOX_NOTES.md  V2_1_SANDBOX_NOTES.md  V2_2_SANDBOX_NOTES.md  V2_3_SANDBOX_NOTES.md  V2_ACTIVATION_RUNBOOK.md  WHITE_GLOVE_AUDIT.md
infra/: cdk.json  package.json  tsconfig.json
migrations/: 001_initial_schema.js  002_seed_data.js  003_password_reset_tokens.js  004_mfa_backup_codes.js  011_day_parts.js  (+29 more)
(+425 files in other folders)
